fix z-index issue on admin pages

--- a/scss/partials/components/_navdrawer.scss
+++ b/scss/partials/components/_navdrawer.scss
@@ -185,7 +185,7 @@ body {
     .page-wrapper {
         position: relative;
         background: #fff;
-        z-index: 2000;
+        //z-index: 2000;
         @include transition(all, 0.3s, ease-in-out);
     }
 
